--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         </div>
 
         <div class="words">
-            <h2>NIKE ROSHE RUN</h2>
-            <i><p>Mint Green</p></i>
+            <h2 id="mubby">NIKE ROSHE RUN</h2>
+            <i><p id="p2">Mint Green</p></i>
             <div id="div1">
                 <p id="dollar">$150</p>
                 <p id="dollar2">$114.99</p>
             </div>
             <h2 id="word1">DESCRIPTION</h2>
-            <p>With a highly breeathable upper and a causal sihouette, the Nike Roshe Run is definitely a perfect model for summer. For Spring/Summer 2013 a fresh Mint Green colorway's version of this 'yet classic' pair is now available to order.</p>
+            <p id="p1">With a highly breeathable upper and a causal sihouette, the Nike Roshe Run is definitely a perfect model for summer. For Spring/Summer 2013 a fresh Mint Green colorway's version of this 'yet classic' pair is now available to order.</p>
 
 
             <p id="word3">Color</p>
