--- a/index.html
+++ b/index.html
@@ -15,40 +15,54 @@
 
     <main id="whole">
 
-        <div id="shoe">
-            <img src="/media/nikeShoe.png" alt=fullscreen>
-
-
-        </div>
-
-        <div class="words">
-            <h2 id="mubby">NIKE ROSHE RUN</h2>
-            <i><p id="p2">Mint Green</p></i>
-            <div id="div1">
-                <p id="dollar">$150</p>
-                <p id="dollar2">$114.99</p>
-            </div>
-            <h2 id="word1">DESCRIPTION</h2>
-            <p id="p1">With a highly breeathable upper and a causal sihouette, the Nike Roshe Run is definitely a perfect model for summer. For Spring/Summer 2013 a fresh Mint Green colorway's version of this 'yet classic' pair is now available to order.</p>
-
-
-            <p id="word3">Color</p>
-
-            <div id="div1">
-
-
-
-
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
-                <div class="circle5"></div>
+        <div id="mafo">
+            <div id="shoe">
+                <img src="/media/nikeShoe.png" alt=fullscreen>
 
 
             </div>
 
+            <div class="words">
+
+
+                <div id="star1">
+                    <h2 id="mubby">NIKE ROSHE RUN</h2>
+                    <img src="/media/5 Stars .jpeg" alt="" class="star">
+                    <!-- <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 15.968l4.247 2.377-.949-4.773 3.573-3.305-4.833-.573L12 5.275v10.693zm0 2.292l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928L12 18.26z" fill="rgba(236,29,37,1)"/></svg> -->
+
+                </div>
+
+
+                <i><p id="p2">Mint Green</p></span>
+                <div id="div1">
+                    <p id="dollar">$150</p>
+                    <p id="dollar2">$114.99</p>
+                </div>
+                <h2 id="word1">DESCRIPTION</h2>
+                <p id="p1">With a highly breeathable upper and a causal sihouette, the Nike Roshe Run is definitely a perfect model for summer. For Spring/Summer 2013 a fresh Mint Green colorway's version of this 'yet classic' pair is now available to order.</p>
+
+
+                <p id="word3">Color</p>
+
+                <div id="div1">
+
+
+
+
+                    <div class="circle1"></div>
+                    <div class="circle2"></div>
+                    <div class="circle3"></div>
+                    <div class="circle4"></div>
+                    <div class="circle5"></div>
+
+
+                </div>
+
+                <div class="line1"></div>
+            </div>
+
         </div>
+
 
     </main>
 
