--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
         <div id="mafo">
             <div id="shoe">
+                <div class="nike">
+                </div>
                 <img src="/media/nikeShoe.png" alt=fullscreen>
+
 
 
             </div>
@@ -28,7 +31,7 @@
                 <div id="star1">
                     <h2 id="mubby">NIKE ROSHE RUN</h2>
                     <img src="/media/5 Stars .jpeg" alt="" class="star">
-                    <!-- <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 15.968l4.247 2.377-.949-4.773 3.573-3.305-4.833-.573L12 5.275v10.693zm0 2.292l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928L12 18.26z" fill="rgba(236,29,37,1)"/></svg> -->
+
 
                 </div>
 
@@ -38,13 +41,18 @@
                     <p id="dollar">$150</p>
                     <p id="dollar2">$114.99</p>
                 </div>
-                <h2 id="word1">DESCRIPTION</h2>
+                <h3 id="word1">DESCRIPTION</h3>
                 <p id="p1">With a highly breeathable upper and a causal sihouette, the Nike Roshe Run is definitely a perfect model for summer. For Spring/Summer 2013 a fresh Mint Green colorway's version of this 'yet classic' pair is now available to order.</p>
 
 
-                <p id="word3">Color</p>
+            <div class="csq">
+                <p class="word3">COLOR</p>
+                <p class="size">SIZES</p>
 
-                <div id="div1">
+
+            </div>
+
+                <div class="circles">
 
 
 
@@ -57,9 +65,25 @@
 
 
                 </div>
+            <div id="cart">
+                <button class="button" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M4 6.414L.757 3.172l1.415-1.415L5.414 5h15.242a1 1 0 0 1 .958 1.287l-2.4 8a1 1 0 0 1-.958.713H6v2h11v2H5a1 1 0 0 1-1-1V6.414zM6 7v6h11.512l1.8-6H6zm-.5 16a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm12 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" fill="rgba(236,240,241,1)"/></svg>ADD TO CART</button>
 
-                <div class="line1"></div>
+              
+
+
             </div>
+
+
+        <div class="cart_image">
+
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M13.576 17.271l-5.11-2.787a3.5 3.5 0 1 1 0-4.968l5.11-2.787a3.5 3.5 0 1 1 .958 1.755l-5.11 2.787a3.514 3.514 0 0 1 0 1.458l5.11 2.787a3.5 3.5 0 1 1-.958 1.755z" fill="gray"/></svg>
+
+        </div>
+
+
+
+            </div>
+
 
         </div>
 
